Small contrast issue fix
Small contrast issue fix

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -111,6 +111,9 @@ body {
     --header-bg: url('bg2.jpg');
 
     --header-dim: linear-gradient(180deg, rgba(0, 0, 0, 0.425) 0%, rgba(0, 0, 0, 0.3) 50%, rgba(0, 0, 0, 0.69) 100%);
+
+    --nav-links-mobile: #000000;
+    
     @media (prefers-color-scheme: dark) {
         --navbar-texts: #ffffff;
         --navbar-bg: rgba(22, 22, 22, 1);
@@ -146,6 +149,8 @@ body {
         --header-bg: url('bg.jpg');
 
         --header-dim: linear-gradient(180deg, rgba(0, 0, 0, 0.33) 0%, rgba(0, 0, 0, 0.06) 50%, rgba(0, 0, 0, 0.69) 100%);
+
+        --nav-links-mobile: #ffffff;
     }
 }
 .navbar {
@@ -256,7 +261,7 @@ body {
                 transition: transform 0.35s ease, -webkit-transform 0.35s ease;
                 & > li a{
                     margin: 5% 0;
-                    color: black;
+                    color: var(--nav-links-mobile);
                 }
             }
             @media screen and (max-width: 430px) {
